[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sol-trade-sdk"
version = "0.1.0"
description = "High-performance Solana trading SDK with multi-protocol support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sol Trade SDK Team" }
]
keywords = ["solana", "trading", "dex", "blockchain", "defi", "pumpfun", "raydium", "meteora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "solders>=0.18.0",
    "solana>=0.30.0",
    "anchorpy>=0.18.0",
    "aiohttp>=3.9.0",
    "base58>=2.1.1",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/0xfnzero/sol-trade-sdk-python"
Documentation = "https://github.com/0xfnzero/sol-trade-sdk-python#readme"
Repository = "https://github.com/0xfnzero/sol-trade-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
src = "sol_trade_sdk"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DTZ", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
